<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:jiyi="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/person_center_down_bg"
    android:paddingTop="15dp">
    <TextView
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="7dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/personcenter_foot"
        android:textSize="18sp"/>
    <app.jiyi.com.mjoke.utilview.PersonItemView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        jiyi:showline="half"
        jiyi:msrc="@mipmap/person_center_article"
        jiyi:text="@string/personcenter_down_article"
        ></app.jiyi.com.mjoke.utilview.PersonItemView>
    <app.jiyi.com.mjoke.utilview.PersonItemView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        jiyi:showline="half"
        jiyi:msrc="@mipmap/person_center_share"
        jiyi:text="@string/personcenter_down_share"
        ></app.jiyi.com.mjoke.utilview.PersonItemView>
    <app.jiyi.com.mjoke.utilview.PersonItemView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        jiyi:showline="half"
        jiyi:msrc="@mipmap/person_center_hide"
        jiyi:text="@string/personcenter_down_hide"
        ></app.jiyi.com.mjoke.utilview.PersonItemView>
    <app.jiyi.com.mjoke.utilview.PersonItemView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        jiyi:showline="half"
        jiyi:msrc="@mipmap/person_center_look"
        jiyi:text="@string/personcenter_down_look"
        ></app.jiyi.com.mjoke.utilview.PersonItemView>
    <app.jiyi.com.mjoke.utilview.PersonItemView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        jiyi:showline="full"
        jiyi:msrc="@mipmap/person_center_comment"
        jiyi:text="@string/personcenter_down_comment"
        ></app.jiyi.com.mjoke.utilview.PersonItemView>
    <TextView
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/personcenter_find"
        android:textSize="18sp"/>
    <app.jiyi.com.mjoke.utilview.PersonItemView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        jiyi:showline="half"
        jiyi:msrc="@mipmap/person_center_publish"
        jiyi:text="@string/personcenter_publish"
        ></app.jiyi.com.mjoke.utilview.PersonItemView>
    <app.jiyi.com.mjoke.utilview.PersonItemView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        jiyi:showline="half"
        jiyi:msrc="@mipmap/person_center_search"
        jiyi:text="@string/personcenter_search"
        ></app.jiyi.com.mjoke.utilview.PersonItemView>
    <app.jiyi.com.mjoke.utilview.PersonItemView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        jiyi:showline="full"
        jiyi:msrc="@mipmap/person_center_set"
        jiyi:text="@string/personcenter_set"
        ></app.jiyi.com.mjoke.utilview.PersonItemView>
    <Button
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_height="45dp"
        android:background="@drawable/editinfo_bt"
        android:gravity="center"
        android:text="@string/personcenter_edit_info"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold" >
    </Button>
    <Button
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="10dp"
        android:layout_height="45dp"
        android:background="@drawable/loginout_bt"
        android:gravity="center"
        android:text="@string/personcenter_logout"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold" >
    </Button>


</LinearLayout>