<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/share_bg"
    android:padding="20dp">
    <TextView
        android:textColor="@color/mblack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_contact"
        android:textSize="16sp"/>
    <View
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/maincolor"/>
    <TextView
        android:textColor="@color/mblack"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/about_contact_blog"/>
    <TextView
        android:textColor="@color/mblack"
        android:layout_marginTop="10dp"
        android:linksClickable="true"
        android:autoLink="all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_contact_blog_value"/>
    <TextView
        android:textColor="@color/mblack"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_contact_email"
        android:textSize="16sp"/>
    <TextView
        android:textColor="@color/mblack"
        android:layout_marginTop="10dp"
        android:linksClickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:text="@string/about_contact_email_value"/>
    <Button
        android:id="@+id/contact_dialog_close"
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:layout_height="40dp"
        android:background="@drawable/editinfo_bt"
        android:gravity="center"
        android:text="关闭"
        android:textColor="#ffffff"
        android:textSize="16sp"
        />
</LinearLayout>