<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:rippleview="http://schemas.android.com/apk/res-auto"
    xmlns:settingitem="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mwhite"
    android:orientation="vertical"
    tools:context="app.jiyi.com.mjoke.aty.SettingActivity">

    <include layout="@layout/toptitlebar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:background="@color/mwhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="160dp"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="25dp"
                android:layout_marginLeft="10dp"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/setting_person_set"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/long_term"/>
            <app.jiyi.com.mjoke.utilview.SettingItemView
                android:id="@+id/setting_person_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                settingitem:st_lefttext="@string/setting_personal_center"
                settingitem:st_type="arrow"
                ></app.jiyi.com.mjoke.utilview.SettingItemView>
            <app.jiyi.com.mjoke.utilview.SettingItemView
                android:id="@+id/setting_person_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                settingitem:st_lefttext="@string/setting_personal_set_edit"
                settingitem:st_type="arrow"
                ></app.jiyi.com.mjoke.utilview.SettingItemView>

            <TextView
                android:layout_marginTop="25dp"
                android:layout_marginLeft="10dp"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/setting_system_set"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/long_term"/>
            <com.andexert.library.RippleView
                android:id="@+id/setting_sys_theme"
                android:background="@drawable/setting_item_press"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                rippleview:rv_color="@color/setting_item_pressed_hover"
                rippleview:rv_framerate="20"
                rippleview:rv_alpha="160"
                rippleview:rv_rippleDuration="300"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mblack"
                    android:text="@string/setting_system_set_changetheme"
                    android:gravity="left|center_vertical"
                    android:textSize="16sp"
                    />
                <ImageView
                    android:id="@+id/setting_sys_theme_yangshi"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@color/color01"/>
            </com.andexert.library.RippleView>
            <app.jiyi.com.mjoke.utilview.SettingItemView
                android:id="@+id/setting_sys_font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                settingitem:st_lefttext="@string/setting_system_set_font"
                settingitem:st_type="text"
                settingitem:st_righttext="17号字体"
                ></app.jiyi.com.mjoke.utilview.SettingItemView>



            <TextView
                android:layout_marginTop="25dp"
                android:layout_marginLeft="10dp"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/setting_other_set"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/long_term"/>
            <app.jiyi.com.mjoke.utilview.SettingItemView
                android:id="@+id/setting_other_prob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                settingitem:st_lefttext="@string/setting_other_set_probleam"
                settingitem:st_type="arrow"
                ></app.jiyi.com.mjoke.utilview.SettingItemView>
            <app.jiyi.com.mjoke.utilview.SettingItemView
                android:id="@+id/setting_other_banben"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                settingitem:st_lefttext="@string/setting_other_set_reflash"
                settingitem:st_type="text"
                settingitem:st_righttext="当前版本1.0"
                ></app.jiyi.com.mjoke.utilview.SettingItemView>
            <app.jiyi.com.mjoke.utilview.SettingItemView
                android:id="@+id/setting_other_law"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                settingitem:st_lefttext="@string/setting_other_set_law"
                settingitem:st_type="arrow"
                ></app.jiyi.com.mjoke.utilview.SettingItemView>
            <app.jiyi.com.mjoke.utilview.SettingItemView
                android:id="@+id/setting_other_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                settingitem:st_lefttext="@string/setting_other_set_about"
                settingitem:st_type="arrow"
                ></app.jiyi.com.mjoke.utilview.SettingItemView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
