<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/tab_bg">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="horizontal">
    <RelativeLayout
        android:id="@+id/rl_tab01"
        android:onClick="tabClick"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_tab01"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/maincolor"
            android:text="@string/mainview_tab_01"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_tab02"
        android:onClick="tabClick"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_tab02"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainview_tab_02"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_tab03"
        android:onClick="tabClick"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_tab03"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainview_tab_03"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_tab04"
        android:onClick="tabClick"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_tab04"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainview_tab_04"/>
    </RelativeLayout>
</LinearLayout>
    <View
        android:id="@+id/tab_line"
        android:layout_width="100dp"
        android:layout_height="3dp"
        android:background="@color/maincolor"/>
</LinearLayout>