<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:jiyi="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="app.jiyi.com.mjoke.aty.EditInfoActivity">

    <include
        layout="@layout/toptitlebar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="20dp"
            android:paddingTop="20dp"
            android:paddingLeft="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp">
                    <app.jiyi.com.mjoke.utilview.RoundImageView
                        android:id="@+id/editinfo_head"
                        android:layout_centerInParent="true"
                        android:layout_width="63dp"
                        android:layout_height="63dp"
                        jiyi:borderWidth="2dp"
                        jiyi:borderColor="@color/editinfo_photo_broder"
                        jiyi:borderRadius="4dp"
                        android:src="@mipmap/editinfo_head"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_marginLeft="13dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    >
                    <LinearLayout
                        android:layout_alignParentTop="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="@string/editinfo_nichen"/>
                        <EditText
                            android:id="@+id/editinfo_username"
                            android:layout_marginLeft="5dp"
                            android:paddingLeft="9dp"
                            android:paddingRight="5dp"
                            android:paddingTop="3dp"
                            android:paddingBottom="8dp"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/small_edittext_background"
                            android:hint="@string/editinfo_nichen_hint"
                            android:singleLine="true"
                            android:maxLength="10"
                            android:textSize="16sp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_alignParentBottom="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="@string/editinfo_sex"/>
                        <LinearLayout
                            android:id="@+id/editinfo_sex_man"
                            android:layout_marginLeft="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <ImageView
                                android:id="@+id/iv_sex_man"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@mipmap/radio_normal"/>
                            <TextView
                                android:layout_marginLeft="3dp"
                                android:textSize="16sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/editinfo_sex_man"/>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/editinfo_sex_women"
                            android:layout_marginLeft="18dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <ImageView
                                android:id="@+id/iv_sex_woman"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@mipmap/radio_pressed"/>
                            <TextView
                                android:layout_marginLeft="3dp"
                                android:textSize="16sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/editinfo_sex_female"/>
                        </LinearLayout>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="5dp"
                android:layout_marginTop="45dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    android:src="@mipmap/user_edit_info_flag"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:text="@string/editinfo_favourit"/>
            </LinearLayout>
            <EditText
                android:id="@+id/editinfo_motto"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="9dp"
                android:paddingRight="5dp"
                android:paddingTop="3dp"
                android:paddingBottom="8dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@drawable/small_edittext_background"
                android:hint="@string/editinfo_favourit_hint"
                android:singleLine="true"
                android:maxLength="24"
                android:textSize="17sp" />
            <Button
                android:id="@+id/editinfo_save_edit"
                android:layout_width="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="90dp"
                android:layout_height="45dp"
                android:background="@drawable/editinfo_bt"
                android:gravity="center"
                android:text="@string/editinfo_save"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold" >
            </Button>
            <Button
                android:id="@+id/editinfo_cancle"
                android:layout_width="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:layout_height="45dp"
                android:background="@drawable/loginout_bt"
                android:gravity="center"
                android:text="@string/editinfo_cancel_save"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold" >
            </Button>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
